--- a/tests/wpt/metadata/html/dom/idlharness.https.html.ini
+++ b/tests/wpt/metadata/html/dom/idlharness.https.html.ini
@@ -1,4 +1,5 @@
 [idlharness.https.html?exclude=(Document|Window|HTML.*)]
+  disabled: true
   [ImageBitmapRenderingContext interface: operation transferFromImageBitmap(ImageBitmap)]
     expected: FAIL
 
@@ -1402,6 +1403,7 @@
 
 
 [idlharness.https.html?include=(Document|Window)]
+  disabled: true
   [Document interface: documentWithHandlers must inherit property "queryCommandEnabled(DOMString)" with the proper type]
     expected: FAIL
 
@@ -1782,6 +1784,7 @@
 
 
 [idlharness.https.html?include=HTML.*]
+  disabled: true
   [HTMLInputElement interface: calling setCustomValidity(DOMString) on createInput("hidden") with too few arguments must throw TypeError]
     expected: FAIL
 
